# damoco

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: DOCUMENTATION.md  PUBLISH.md  THEORY.md  VALIDATION.md
src/damoco/: __init__.py  _utils.py  coupling.py  derivatives.py  metrics.py  plotting.py  protophase.py  synchrony.py
src/domoco/: __init__.py  _utils.py  coupling.py  derivatives.py  metrics.py  plotting.py  protophase.py  synchrony.py
tests/: test_coupling.py  test_derivatives.py  test_plotting.py  test_protophase.py  test_sync_metrics.py
