[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domoco"
version = "0.1.1"
description = "Python port of DAMOCO MATLAB functions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Çağdaş Topçu" }
]
maintainers = [
  { name = "Çağdaş Topçu" }
]
keywords = ["oscillator", "phase", "coupling", "damoco", "dynamics", "synchronization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/cagdastopcu/domoco"
Repository = "https://github.com/cagdastopcu/domoco"
Issues = "https://github.com/cagdastopcu/domoco/issues"
Source-MATLAB = "http://www.stat.physik.uni-potsdam.de/%7Emros/damoco2.html"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "build>=1.2",
  "twine>=5.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
